[package]
name = "VeilDE-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
freetype = "0.7.2"
glutin = "0.32.3"
glutin-winit = "0.5.0"
imgui-sys = { version = "0.12.0", features = ["freetype", "use-vcpkg"] }
imgui = { version = "0.12.0", features = ["freetype"] }
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
native-dialog = "0.9.6"
winit = "0.30.12"
chrono = "0.4.43"
